--- a/index.html
+++ b/index.html
@@ -15,37 +15,46 @@
 
     </header>
     <main>
+        <!--------------------- 
+            top player start
+         ---------------------->
         <section class="container">
             <div class="top-players">
-                <h2 class="title">Top Players</h2>
+                <h2 class="title">Name</h2>
                 <div class="players">
                     <div class="player">
                         <img src="images/players/player-1.png" alt="">
-                        <h3>Top Player - 1</h3>
+                        <h3>Hasibur Rahman Akash</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-2.png" alt="">
-                        <h3>Top Player - 2</h3>
+                        <h3>Sadia Binte Shams</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-3.png" alt="">
-                        <h3>Top Player - 3</h3>
+                        <h3>Hasibur Rahman Akash</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-4.png" alt="">
-                        <h3>Top Player - 4</h3>
+                        <h3>Hasibur Rahman Akash</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-5.png" alt="">
-                        <h3>Top Player - 5</h3>
+                        <h3>Hasibur Rahman Akash</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-6.png" alt="">
-                        <h3>Top Player - 6</h3>
+                        <h3>Sadia Binte Shams</h3>
                     </div>
                 </div>
             </div>
+            <!--------------------- 
+                top player end
+            ---------------------->
             <hr>
+            <!--------------------- 
+                top blogs start
+            ---------------------->
             <div class="top-blogs">
                 <h2 class="title">Top Blogs</h2>
                 <div class="blogs">
@@ -54,7 +63,7 @@
                             <img src="images/blogs/blog-1.png" alt="">
                         </div>
                         <div class="blog-info">
-                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                            <h3 class="blog-title">13 of My Favorite <br> UI/UX Goodies</h3>
                             <p class="name">By <a href="">H.R. Akash</a></p>
                         </div>
                     </article>
@@ -72,8 +81,8 @@
                             <img src="images/blogs/blog-3.png" alt="">
                         </div>
                         <div class="blog-info">
-                            <h3 class="blog-title">7 typography tips for interface design</h3>
-                            <p class="name">By <a href="">H.R. Akash</a></p>
+                            <h3 class="blog-title">7 typography tips <br> for interface design</h3>
+                            <p class="name">By <a href="">Sadia B. Shams</a></p>
                         </div>
                     </article>
                     <article class="blog">
@@ -88,6 +97,13 @@
                 </div>
             </div>
         </section>
+        <!--------------------- 
+            top blogs end
+         ---------------------->
+
+        <!--------------------- 
+            top courses start
+         ---------------------->
         <section class="container">
             <h2 class="title"> Top Courses</h2>
             <div class="courses">
@@ -163,6 +179,9 @@
                 </div>
             </div>
         </section>
+        <!--------------------- 
+            top courses end
+         ---------------------->
     </main>
 </body>
 </html>
